
=== Shapes

- Add disable / enable concept for widgets

=== Architectural decision records

=== Breaking changes

=== Dependency update

- [releng] Switch to Jacoco 0.8.10

=== Bug fixes

- https://github.com/eclipse-sirius/sirius-components/issues/2058[#2058] [view] Fix an issue where the default icon for List widget candidates was missing when the candidates were not EObjects.

=== New Features

=== Improvements

- https://github.com/eclipse-sirius/sirius-components/issues/2034[#2034] [diagram] Integrate the workbench selection in the react-flow prototype
- https://github.com/eclipse-sirius/sirius-components/issues/2047[#2047] [view] Activate architectural tests on `sirius-components-view-builder`
`

== v2023.6.0

=== Shapes

- Filter tree based representations
- Add pages to form in the view DSL
- Simplify the programmatic creation of view models
- Add the ability to convert an odesign to a view model
- Provide a view-based version of Flow
- Add support for the features of the compatibility layer not supported in the view DSL
- Add an example showing how to contribute to the details view with the View DSL
- Improve the layout of simple nodes
- Support custom widgets in Form representations
- Send message to the frontend

=== Architectural decision records

- [ADR-098] Use the editing context to compute the metamodels
- [ADR-099] Filter tree based representations
- [ADR-100] Add support for custom widgets
- [ADR-101] Feedback messages on actions
- [ADR-102] Expand all menu item contribution in Explorer View

=== Breaking changes

- https://github.com/eclipse-sirius/sirius-components/issues/1897[#1897] [diagram] ToolSection are now using records
- https://github.com/eclipse-sirius/sirius-components/issues/1616[#1616] [core] Use Java records for all our payloads
- https://github.com/eclipse-sirius/sirius-components/issues/1848[#1848] [project] Remove the frontend dependency to `uuid` in favor of `crypto.randomUUID`